header style misaligned, trying to fix

--- a/docs/assets/css/style.css
+++ b/docs/assets/css/style.css
@@ -89,7 +89,7 @@ body {
 
 /* Dropdown menu styling */
 .dropdown {
-    position: relative;
+    /* position: relative; */
     display: inline-block;
 }
 
